Assets in subfolders of currently open .blend are showing in the Asset Browser #105180

Closed
opened 2023-02-24 16:13:26 +01:00 by Philipp Oeser · 0 comments
Member

System Information
Operating system: Linux-6.1.6-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.6, DRM 3.49, 6.1.6-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.3

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-02-24 14:53, hash: 3e0a1cafa7a7
Worked: never?

Short description of error
Assets in subfolders of currently open .blend are showing in the Asset Browser

Exact steps for others to reproduce the error

  • new blank file
  • create a cube, mark as asset, save file to folder "assets", named cube.blend
  • new blank file
  • create a monkey, mark as asset, save the file to the same folder "assets", named monkey.blend
  • place the assets folder in a folder that contains any blend file (that we intend to open in the next step)
  • open that file
  • open the Asset Browser (All mode)
  • notice the assets in the "assets" subfolder are showing even though they are not part of the Current File (or any other asset library specified in User Preferences) library
**System Information** Operating system: Linux-6.1.6-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.6, DRM 3.49, 6.1.6-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.3 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-02-24 14:53, hash: `3e0a1cafa7a7` Worked: never? **Short description of error** Assets in subfolders of currently open .blend are showing in the Asset Browser **Exact steps for others to reproduce the error** - new blank file - create a cube, mark as asset, save file to folder "assets", named cube.blend - new blank file - create a monkey, mark as asset, save the file to the same folder "assets", named monkey.blend - place the assets folder in a folder that contains any blend file (that we intend to open in the next step) - open that file - open the Asset Browser (All mode) - notice the assets in the "assets" subfolder are showing even though they are not part of the Current File (or any other asset library specified in User Preferences) library
Julian Eisel added this to the Pipeline, Assets & IO project 2023-02-24 17:00:13 +01:00
Julian Eisel added
Priority
High
and removed
Priority
Normal
labels 2023-02-24 17:00:31 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-15 13:07:41 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-07-03 13:01:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105180
No description provided.